@startuml
left to right direction


class UserResource {
    +getAll(): User[]
    +getById(id: int) User
    +add(user: User)
}

interface UserService {
    +addUser(user: User)
    +getAllUsers(): User[]
    +getUserById(id: int): User
}

namespace main {
    class UserServiceDefault {
         +addUser(user: User)
         +getAllUsers(): User[]
         +getUserById(id: int): User
    }

    interface UserDao {
        +save(user: User)
        +findAll(): User[]
        +findOne(id: int): User
    }

    class UserMysqlDao {
        +save(user: User)
        +findAll(): User[]
        +findOne(id: int): User
    }
}

namespace test {
    class UserServiceMock {
         +addUser(user: User)
         +getAllUsers(): User[]
         +getUserById(id: int): User
    }
}

allowmixing
database userdb

UserResource *-- UserService
UserServiceDefault ..> UserService
UserServiceMock ..> UserService
UserServiceDefault *-- UserDao
UserMysqlDao ..>UserDao
UserMysqlDao <--> userdb

@enduml